@@ -3,6 +3,7 @@ import moe.tlaster.precompose.koin.koinViewModel
 import moe.tlaster.precompose.navigation.NavHost
 import moe.tlaster.precompose.navigation.rememberNavigator
 import moe.tlaster.precompose.navigation.transition.NavTransition
+import presentation.calendar.CalendarViewModel
 import presentation.screens.dayPartMenu.DayPartMenuScreen
 import presentation.screens.dayPartMenu.DayPartMenuViewModel
 import presentation.screens.mainMenu.MainMenuScreen
@@ -17,8 +18,9 @@ fun Navigation() {
         initialRoute = "/mainMenu"
     ) {
         scene(route = "/mainMenu", navTransition = NavTransition()) {
-            val vm = koinViewModel(MainMenuViewModel::class)
-            MainMenuScreen(vm) {navigator.navigate("/dayPartMenu/$it")}
+            val mainVM = koinViewModel(MainMenuViewModel::class)
+            val calendarVM = koinViewModel(CalendarViewModel::class)
+            MainMenuScreen(mainVM, calendarVM) {navigator.navigate("/dayPartMenu/$it")}
         }
 
         scene(route = "/dayPartMenu/{part}", navTransition = NavTransition()) {
