@@ -11,15 +11,22 @@ import androidx.compose.runtime.getValue
 import androidx.compose.ui.Alignment
 import androidx.compose.ui.Modifier
 import androidx.compose.ui.draw.paint
+import androidx.compose.ui.graphics.Color
 import androidx.compose.ui.layout.ContentScale
+import androidx.compose.ui.text.style.TextAlign
 import androidx.compose.ui.unit.dp
+import androidx.compose.ui.unit.sp
+import data.calendar.Season
 import moe.tlaster.precompose.koin.koinViewModel
 import org.jetbrains.compose.resources.ExperimentalResourceApi
 import org.jetbrains.compose.resources.painterResource
 import presentation.calendar.CalendarFragment
 import presentation.calendar.CalendarViewModel
+import presentation.resourceComposition.toResourceString
 import presentation.reusableUi.ImageButton
+import presentation.reusableUi.OutlinedText
 import zealotry.composeapp.generated.resources.Res
+import zealotry.composeapp.generated.resources.autumn
 import zealotry.composeapp.generated.resources.winter
 import zealotry.composeapp.generated.resources.day
 import zealotry.composeapp.generated.resources.daily_rituals
@@ -28,15 +35,28 @@ import zealotry.composeapp.generated.resources.evening
 import zealotry.composeapp.generated.resources.evening_button
 import zealotry.composeapp.generated.resources.morning
 import zealotry.composeapp.generated.resources.morning_button
+import zealotry.composeapp.generated.resources.spring
+import zealotry.composeapp.generated.resources.summer
 
 @OptIn(ExperimentalResourceApi::class)
 @Composable
-fun MainMenuScreen(viewModel: MainMenuViewModel, onNavigate: (String) -> Unit) {
+fun MainMenuScreen(
+    viewModel: MainMenuViewModel,
+    calendarViewModel: CalendarViewModel,
+    onNavigate: (String) -> Unit
+) {
     val uiState by viewModel.uiState.collectAsState()
+    val calendar by calendarViewModel.calendarState.collectAsState()
 
     Box(modifier = with(Modifier) {
+        val background = when (calendar.seasonInfo.currentSeason) {
+            Season.WINTER -> Res.drawable.winter
+            Season.SPRING -> Res.drawable.spring
+            Season.SUMMER -> Res.drawable.summer
+            Season.AUTUMN -> Res.drawable.autumn
+        }
         fillMaxSize().paint(
-            painterResource(Res.drawable.winter),
+            painterResource(background),
             contentScale = ContentScale.Crop
         )
     })
@@ -45,9 +65,15 @@ fun MainMenuScreen(viewModel: MainMenuViewModel, onNavigate: (String) -> Unit) {
         Modifier.fillMaxSize(),
         horizontalAlignment = Alignment.CenterHorizontally
     ) {
-        Box(Modifier.padding(20.dp).weight(1f)){
-            val vm = koinViewModel(CalendarViewModel::class)
-            CalendarFragment(vm)
+        Box(Modifier.padding(20.dp).weight(1f)) {
+            OutlinedText(
+                //TODO: tidy up this title
+                text = "${calendar.dayOfWeek.toResourceString()}, ${calendar.seasonInfo.dayOfTheSeason} of ${calendar.seasonInfo.currentSeason.name}",
+                textBorderColour = Color(0xFFFFFFFF),
+                modifier = Modifier.padding(20.dp),
+                fontSize = 24.sp,
+                textAlign = TextAlign.Center
+            )
         }
 
         MainMenuSub(
